Fixing logo overlap

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,3 @@
-      
-
   :root {
     --main-color: Goldenrod;
     --secondary-color: white;
@@ -35,6 +33,7 @@
   nav {
         border-bottom: 3px solid var(--tertiary-color);
         background: var(--secondary-color);
+        z-index: 1;
     }
 
     nav ul {
